# delivery_servise

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 7f4d2fe219f6_init.py  a7b132a5e666_new_test.py  a8a0a08c0afc_new_test.py  aef1c5f1eb9b_init.py  bd78aed20ea0_init.py
src/: initial_seed.py
src/app/: asgi.py  main.py
src/app/api/: middleware.py
src/app/api/dependencies/: cache.py  repository.py  session.py  user.py
src/app/api/routers/: debug.py  parcels.py
src/app/core/: config.py  database.py  logging_config.py  paths.py  rabbitmq.py  scheduler.py  worker.py
src/app/core/config/: __init__.py  api.py  base.py  db.py  rabbitmq.py  redis.py
src/app/models/: base.py  parcel.py  user.py
src/app/repository/crud/: base.py  parcel.py  user.py
src/app/schemas/: schemas.py
src/app/utils/: cache.py
src/tests/: test_api.py  test_endopints.py
tests/: test_routes.py
